# pavex-demo

demo/: Cargo.toml
demo/src/: blueprint.rs  lib.rs  user_agent.rs
demo/src/routes/: greet.rs  mod.rs
demo_server/: Cargo.toml
demo_server/tests/integration/: greet.rs  main.rs
demo_server_sdk/: Cargo.toml  blueprint.ron
demo_server_sdk/src/: lib.rs
